Fixed green color not showing up due to a weird color override.

--- a/css/poolpol.css
+++ b/css/poolpol.css
@@ -7,7 +7,7 @@ html {
 }
 
 .greenify {
-	color: forestgreen;
+	color: forestgreen !important;
 }
 
 .bluify {
